--- a/OrangeHRM_POMTestNG_Project/test-output/emailable-report.html
+++ b/OrangeHRM_POMTestNG_Project/test-output/emailable-report.html
@@ -9,14 +9,14 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Parallel Testing Suite</th></tr>
-<tr><td><a href="#t0">Parallel Tests</a></td><td class="num">0</td><td class="num attn">3</td><td class="num">0</td><td class="num">0</td><td class="num">6,625</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Parallel Tests</a></td><td class="num">0</td><td class="num attn">3</td><td class="num">0</td><td class="num">0</td><td class="num">2,657</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Parallel Testing Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Parallel Tests &#8212; failed (configuration methods)</th></tr><tr class="failedeven"><td rowspan="1">PIMPageTest</td><td><a href="#m0">setup</a></td><td rowspan="1">1698919467456</td><td rowspan="1">5891</td></tr><tr class="failedodd"><td rowspan="1">RecruitmentTest</td><td><a href="#m1">setup</a></td><td rowspan="1">1698919473379</td><td rowspan="1">628</td></tr><tr><th colspan="4">Parallel Tests &#8212; skipped (configuration methods)</th></tr><tr class="skippedeven"><td rowspan="1">PIMPageTest</td><td><a href="#m2">closeBrowser</a></td><td rowspan="1">1698919473373</td><td rowspan="1">0</td></tr><tr class="skippedodd"><td rowspan="3">RecruitmentTest</td><td><a href="#m3">closeBrowser</a></td><td rowspan="2">1698919474022</td><td rowspan="2">0</td></tr><tr class="skippedodd"><td><a href="#m4">closeBrowser</a></td></tr><tr class="skippedodd"><td><a href="#m5">setup</a></td><td rowspan="1">1698919474016</td><td rowspan="1">0</td></tr><tr><th colspan="4">Parallel Tests &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">PIMPageTest</td><td><a href="#m6">test1</a></td><td rowspan="1">1698919473366</td><td rowspan="1">0</td></tr><tr class="skippedodd"><td rowspan="2">RecruitmentTest</td><td><a href="#m7">test01</a></td><td rowspan="1">1698919474009</td><td rowspan="1">0</td></tr><tr class="skippedodd"><td><a href="#m8">test02</a></td><td rowspan="1">1698919474017</td><td rowspan="1">0</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Parallel Testing Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Parallel Tests &#8212; failed (configuration methods)</th></tr><tr class="failedeven"><td rowspan="1">PIMPageTest</td><td><a href="#m0">setup</a></td><td rowspan="1">1700249634910</td><td rowspan="1">1714</td></tr><tr class="failedodd"><td rowspan="1">RecruitmentTest</td><td><a href="#m1">setup</a></td><td rowspan="1">1700249636663</td><td rowspan="1">751</td></tr><tr><th colspan="4">Parallel Tests &#8212; skipped (configuration methods)</th></tr><tr class="skippedeven"><td rowspan="1">PIMPageTest</td><td><a href="#m2">closeBrowser</a></td><td rowspan="1">1700249636657</td><td rowspan="1">0</td></tr><tr class="skippedodd"><td rowspan="3">RecruitmentTest</td><td><a href="#m3">closeBrowser</a></td><td rowspan="2">1700249637445</td><td rowspan="2">0</td></tr><tr class="skippedodd"><td><a href="#m4">closeBrowser</a></td></tr><tr class="skippedodd"><td><a href="#m5">setup</a></td><td rowspan="1">1700249637448</td><td rowspan="1">0</td></tr><tr><th colspan="4">Parallel Tests &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">PIMPageTest</td><td><a href="#m6">test1</a></td><td rowspan="1">1700249636642</td><td rowspan="1">0</td></tr><tr class="skippedodd"><td rowspan="2">RecruitmentTest</td><td><a href="#m7">test01</a></td><td rowspan="1">1700249637418</td><td rowspan="1">1</td></tr><tr class="skippedodd"><td><a href="#m8">test02</a></td><td rowspan="1">1700249637471</td><td rowspan="1">1</td></tr></tbody>
 </table>
 <h2>Parallel Tests</h2><h3 id="m0">PIMPageTest#setup</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.openqa.selenium.SessionNotCreatedException: Could not start a new session. Possible causes are invalid address of the remote server or browser start-up failure. 
-Host info: host: &apos;DESKTOP-IEFDETE&apos;, ip: &apos;192.168.1.6&apos;
+Host info: host: &apos;DESKTOP-QLT8R1S&apos;, ip: &apos;192.168.31.77&apos;
 Build info: version: &apos;4.14.1&apos;, revision: &apos;03f8ede370&apos;
-System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;17.0.7&apos;
+System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;18.0.2&apos;
 Driver info: org.openqa.selenium.chrome.ChromeDriver
 Command: [null, newSession {capabilities=[Capabilities {browserName: chrome, goog:chromeOptions: {args: [], binary: C:\Program Files\Google\Chr..., extensions: []}}]}]
 	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:620)
@@ -34,12 +34,12 @@ Command: [null, newSession {capabilities=[Capabilities {browserName: chrome, goo
 Caused by: java.lang.NoSuchMethodError: &apos;void com.google.common.base.Throwables.throwIfUnchecked(java.lang.Throwable)&apos;
 	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:192)
 	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:602)
-	... 27 more
-... Removed 16 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+	... 25 more
+... Removed 14 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m1">RecruitmentTest#setup</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.openqa.selenium.SessionNotCreatedException: Could not start a new session. Possible causes are invalid address of the remote server or browser start-up failure. 
-Host info: host: &apos;DESKTOP-IEFDETE&apos;, ip: &apos;192.168.1.6&apos;
+Host info: host: &apos;DESKTOP-QLT8R1S&apos;, ip: &apos;192.168.31.77&apos;
 Build info: version: &apos;4.14.1&apos;, revision: &apos;03f8ede370&apos;
-System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;17.0.7&apos;
+System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;18.0.2&apos;
 Driver info: org.openqa.selenium.chrome.ChromeDriver
 Command: [null, newSession {capabilities=[Capabilities {browserName: chrome, goog:chromeOptions: {args: [], binary: C:\Program Files\Google\Chr..., extensions: []}}]}]
 	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:620)
@@ -57,16 +57,16 @@ Command: [null, newSession {capabilities=[Capabilities {browserName: chrome, goo
 Caused by: java.lang.NoSuchMethodError: &apos;void com.google.common.base.Throwables.throwIfUnchecked(java.lang.Throwable)&apos;
 	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:192)
 	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:602)
-	... 27 more
-... Removed 16 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+	... 25 more
+... Removed 14 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m2">PIMPageTest#closeBrowser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m3">RecruitmentTest#closeBrowser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m4">RecruitmentTest#closeBrowser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m5">RecruitmentTest#setup</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m6">PIMPageTest#test1</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.openqa.selenium.SessionNotCreatedException: Could not start a new session. Possible causes are invalid address of the remote server or browser start-up failure. 
-Host info: host: &apos;DESKTOP-IEFDETE&apos;, ip: &apos;192.168.1.6&apos;
+Host info: host: &apos;DESKTOP-QLT8R1S&apos;, ip: &apos;192.168.31.77&apos;
 Build info: version: &apos;4.14.1&apos;, revision: &apos;03f8ede370&apos;
-System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;17.0.7&apos;
+System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;18.0.2&apos;
 Driver info: org.openqa.selenium.chrome.ChromeDriver
 Command: [null, newSession {capabilities=[Capabilities {browserName: chrome, goog:chromeOptions: {args: [], binary: C:\Program Files\Google\Chr..., extensions: []}}]}]
 	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:620)
@@ -84,12 +84,12 @@ Command: [null, newSession {capabilities=[Capabilities {browserName: chrome, goo
 Caused by: java.lang.NoSuchMethodError: &apos;void com.google.common.base.Throwables.throwIfUnchecked(java.lang.Throwable)&apos;
 	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:192)
 	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:602)
-	... 27 more
-... Removed 16 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+	... 25 more
+... Removed 14 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m7">RecruitmentTest#test01</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.openqa.selenium.SessionNotCreatedException: Could not start a new session. Possible causes are invalid address of the remote server or browser start-up failure. 
-Host info: host: &apos;DESKTOP-IEFDETE&apos;, ip: &apos;192.168.1.6&apos;
+Host info: host: &apos;DESKTOP-QLT8R1S&apos;, ip: &apos;192.168.31.77&apos;
 Build info: version: &apos;4.14.1&apos;, revision: &apos;03f8ede370&apos;
-System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;17.0.7&apos;
+System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;18.0.2&apos;
 Driver info: org.openqa.selenium.chrome.ChromeDriver
 Command: [null, newSession {capabilities=[Capabilities {browserName: chrome, goog:chromeOptions: {args: [], binary: C:\Program Files\Google\Chr..., extensions: []}}]}]
 	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:620)
@@ -107,12 +107,12 @@ Command: [null, newSession {capabilities=[Capabilities {browserName: chrome, goo
 Caused by: java.lang.NoSuchMethodError: &apos;void com.google.common.base.Throwables.throwIfUnchecked(java.lang.Throwable)&apos;
 	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:192)
 	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:602)
-	... 27 more
-... Removed 16 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+	... 25 more
+... Removed 14 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m8">RecruitmentTest#test02</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.openqa.selenium.SessionNotCreatedException: Could not start a new session. Possible causes are invalid address of the remote server or browser start-up failure. 
-Host info: host: &apos;DESKTOP-IEFDETE&apos;, ip: &apos;192.168.1.6&apos;
+Host info: host: &apos;DESKTOP-QLT8R1S&apos;, ip: &apos;192.168.31.77&apos;
 Build info: version: &apos;4.14.1&apos;, revision: &apos;03f8ede370&apos;
-System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;17.0.7&apos;
+System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;18.0.2&apos;
 Driver info: org.openqa.selenium.chrome.ChromeDriver
 Command: [null, newSession {capabilities=[Capabilities {browserName: chrome, goog:chromeOptions: {args: [], binary: C:\Program Files\Google\Chr..., extensions: []}}]}]
 	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:620)
@@ -130,7 +130,7 @@ Command: [null, newSession {capabilities=[Capabilities {browserName: chrome, goo
 Caused by: java.lang.NoSuchMethodError: &apos;void com.google.common.base.Throwables.throwIfUnchecked(java.lang.Throwable)&apos;
 	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:192)
 	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:602)
-	... 27 more
-... Removed 16 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+	... 25 more
+... Removed 14 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
