--- a/OrangeHRM_POMTestNG_Project/test-output/old/Parallel Testing Suite/methods.html
+++ b/OrangeHRM_POMTestNG_Project/test-output/old/Parallel Testing Suite/methods.html
@@ -1,22 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Parallel Testing Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a1cb84">  <td>23/11/02 15:34:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RecruitmentTest.test02()[pri:0, instance:RecruitmentTest@13e344d]">test02</td> 
-  <td>TestNG-test=Parallel Tests-1@426960147</td>   <td></td> </tr>
-<tr bgcolor="7de877">  <td>23/11/02 15:34:33</td>   <td>-653</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PIMPageTest.test1()[pri:0, instance:PIMPageTest@2d710f1a]">test1</td> 
-  <td>TestNG-test=Parallel Tests-1@426960147</td>   <td></td> </tr>
-<tr bgcolor="b59da4">  <td>23/11/02 15:34:34</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:RecruitmentTest@13e344d]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Parallel Tests-1@426960147</td>   <td></td> </tr>
-<tr bgcolor="b59da4">  <td>23/11/02 15:34:34</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeBrowser()[pri:0, instance:RecruitmentTest@13e344d]">&lt;&lt;closeBrowser</td> 
+<tr bgcolor="fd6d70">  <td>23/11/18 01:03:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RecruitmentTest.test01()[pri:0, instance:RecruitmentTest@1f6c9cd8]">test01</td> 
+  <td>TestNG-test=Parallel Tests-1@1424108509</td>   <td></td> </tr>
+<tr bgcolor="fd6d70">  <td>23/11/18 01:03:57</td>   <td>53</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RecruitmentTest.test02()[pri:0, instance:RecruitmentTest@1f6c9cd8]">test02</td> 
+  <td>TestNG-test=Parallel Tests-1@1424108509</td>   <td></td> </tr>
+<tr bgcolor="a26161">  <td>23/11/18 01:03:56</td>   <td>-761</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeBrowser()[pri:0, instance:PIMPageTest@52851b44]">&lt;&lt;closeBrowser</td> 
 <td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="a1cb84">  <td>23/11/02 15:34:34</td>   <td>-8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RecruitmentTest.test01()[pri:0, instance:RecruitmentTest@13e344d]">test01</td> 
-  <td>TestNG-test=Parallel Tests-1@426960147</td>   <td></td> </tr>
-<tr bgcolor="b59da4">  <td>23/11/02 15:34:33</td>   <td>-644</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeBrowser()[pri:0, instance:PIMPageTest@2d710f1a]">&lt;&lt;closeBrowser</td> 
+<tr bgcolor="a26161">  <td>23/11/18 01:03:54</td>   <td>-2505</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:PIMPageTest@52851b44]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Parallel Tests-1@1424108509</td>   <td></td> </tr>
+<tr bgcolor="a26161">  <td>23/11/18 01:03:57</td>   <td>30</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:RecruitmentTest@1f6c9cd8]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Parallel Tests-1@1424108509</td>   <td></td> </tr>
+<tr bgcolor="a26161">  <td>23/11/18 01:03:57</td>   <td>30</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:RecruitmentTest@1f6c9cd8]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Parallel Tests-1@1424108509</td>   <td></td> </tr>
+<tr bgcolor="de62bd">  <td>23/11/18 01:03:56</td>   <td>-777</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PIMPageTest.test1()[pri:0, instance:PIMPageTest@52851b44]">test1</td> 
+  <td>TestNG-test=Parallel Tests-1@1424108509</td>   <td></td> </tr>
+<tr bgcolor="a26161">  <td>23/11/18 01:03:57</td>   <td>79</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeBrowser()[pri:0, instance:RecruitmentTest@1f6c9cd8]">&lt;&lt;closeBrowser</td> 
 <td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="b59da4">  <td>23/11/02 15:34:34</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeBrowser()[pri:0, instance:RecruitmentTest@13e344d]">&lt;&lt;closeBrowser</td> 
+<tr bgcolor="a26161">  <td>23/11/18 01:03:57</td>   <td>79</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeBrowser()[pri:0, instance:RecruitmentTest@1f6c9cd8]">&lt;&lt;closeBrowser</td> 
 <td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="b59da4">  <td>23/11/02 15:34:27</td>   <td>-6559</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:PIMPageTest@2d710f1a]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Parallel Tests-1@426960147</td>   <td></td> </tr>
-<tr bgcolor="b59da4">  <td>23/11/02 15:34:34</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:RecruitmentTest@13e344d]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Parallel Tests-1@426960147</td>   <td></td> </tr>
 </table>
